[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["network-programming"]
description = "A FUSE Driver for remote-fs"
documentation = "https://docs.rs/remotefs-fuse"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remote-fs", "fuse-driver", "fuse"]
license = "MIT"
name = "remotefs-fuse"
readme = "README.md"
repository = "https://github.com/remotefs-rs/remotefs-rs-fuse"
version = "0.1.0"

[dependencies]
log = "^0.4"
remotefs = "0.3"
thiserror = "^1"

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1"
tempfile = "^3"

[features]
default = []
no-log = ["log/max_level_off"]
with-containers = []
