[workspace]
members = ["remotefs-fuse", "remotefs-fuse-cli"]
resolver = "2"

[workspace.package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remote-fs", "fuse-driver", "fuse"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/remotefs-rs/remotefs-rs-fuse"
version = "0.1.0"
