[package]
name = "remotefs-fuse"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/remotefs-fuse"
description = "A FUSE Driver for remote-fs"
include = ["src/**/*", "../LICENSE", "../README.md", "../CHANGELOG.md"]
readme = "../README.md"

[lib]
name = "remotefs_fuse"
path = "src/lib.rs"

[dependencies]
log = "^0.4"
remotefs = "0.3"
thiserror = "^1"
tempfile = "^3"

[target.'cfg(target_family = "unix")'.dependencies]
fuser = "0.14"
libc = "^0.2"
seahash = "4"

[dev-dependencies]
env_logger = "^0.11"
pretty_assertions = "^1"
remotefs-memory = "0.1"

[features]
default = []
no-log = ["log/max_level_off"]
integration-tests = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
